# trustee

./: .gitignore  .pylintrc  CNAME  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  sphinx.yml
docs/: .buildinfo  CNAME  Makefile  conf.py  index.html  index.rst  objects.inv  requirements.txt  searchindex.js
docs/_sources/: api.rst.txt
docs/_templates/: base.html
docs/api/: index.html
docs/genindex/: index.html
docs/py-modindex/: index.html
docs/search/: index.html
examples/: README.rst  classification.py  eval_dagger.py  eval_model.py  eval_trustee.py  pruned_dt_explation  regression.py  test_dagger.py  test_dagger_dnn.py  test_dtextract.py  test_endear.py  test_incremental_dagger.py  test_shap.py  test_trustee.py  test_trustee_dnn.py  trust_classification.py  trust_regression.py  trust_report.py
notebooks/: DeepTraffic Shortcuts.ipynb  Explainable Boosting Machine + CIC_IDS_Heartbleed.ipynb  Heartbleed Shortcut.ipynb  Interpret Heartbleed x Download Dataset.ipynb
notebooks/model_2class_SessionAllLayers/: checkpoint  model_2class_SessionAllLayers.ckpt.index
res/img/local_x_global/: partial_corr.txt  pearson.txt  pearson_heartbleed.txt
res/weights/: MLPClassifier_RandomOverSampler_iot.joblib  MLPClassifier_RandomUnderSampler_iot.joblib  MLPClassifier_Raw_iot.joblib  MLPRegressor_RandomOverSampler_wine.joblib  MLPRegressor_RandomUnderSampler_wine.joblib  MLPRegressor_Raw_boston.joblib  MLPRegressor_Raw_wine.joblib  RandomForestRegressor_RandomUnderSampler_wine.joblib  RandomForestRegressor_Raw_boston.joblib
scripts/: eval_model.py  feature_extraction.py  hb_attack.py  hb_attack.py.bak  out.txt  test_corr.py  test_feature_permutation.py  test_lime.py  test_partial_corr.py  test_pdp.py  test_shap.py  train_test_model.py  unit_test_model.py
skexplain/: __init__.py
skexplain/dists/: __init__.py  categorical.py  gaussian.py  mixed.py
skexplain/enums/: __init__.py  feature_type.py
skexplain/helpers/: tree.py
skexplain/imitation/: __init__.py  dagger.py  endear.py  trustee.py
skexplain/report/: __init__.py  helpers.py  plot.py  trust.py
skexplain/utils/: __init__.py  const.py  dataset.py  funcs.py  input_data.py  log.py  persist.py  plot.py
source/: api.rst
trustee/: __init__.py  base.py  main.py
trustee/report/: plot.py  trust.py
trustee/utils/: __init__.py  const.py  dataset.py  log.py  persist.py  plot.py  rootpath.py  tree.py
