[tool.poetry]
name = "trustee-ml"
version = "0.1.0"
description = "This package implements the Trustee framework to extract decision tree explanation from black-box ML models."
authors = ["Arthur Selle Jacobs <asjacobs@inf.ufrgs.br>"]
packages = [ { include = "trustee"} ]


[tool.poetry.dependencies]
python = ">=3.7.1,<3.9"
numpy = "^1.18.5"
scipy = "^1.4.1"
pandas = "^1.1.0"
scikit-learn = ">=0.23.2"
matplotlib = "^3.3.1"
rootpath = "^0.1.1"
setuptools = "^57.0.0"
torch = "^1.10.0"
prettytable = "3.0.0"
termcolor = "^1.1.0"
autogluon = ">=0.1.0"

[tool.poetry.dev-dependencies]


[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12", "setuptools>=^57.0.0"]
build-backend = "poetry.masonry.api"
